utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/IncludeExcludedModule2.ide
package invalid

typedef module IncludeExcludedModule2 {

}
